2013-06-14  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/ThirdPartyToolbox/nifti as matlab/ThirdPartyToolbox/niftiToolbox:

	- So that it follows the same convention as the others.

	* matlab/ItkToolbox/CMakeLists.txt: (0.6.2)

	- Fix bug. No need to link itk_imfilter to CGAL. This also creates
	a link to Boost libraries both the ones in Matlab and the ones
	provided by Gerardus, which throws a runtime error.

2013-06-12  Ramon Casero  <rcasero@gmail.com>

	* release 0.9.0:

	- Gerardus now builds on Linux and Windows, 64 bit.

	* CMakeLists.txt: (0.3.4)

	- Fix bug, broken linux compilation. We use Boost static libraries
	for the Windows build, but for the linux build we need Boost
	shared objects.

	* CMakeLists.txt: (0.3.3)
	* cpp/src/CMakeLists.txt: (0.3.2)
	* cpp/src/third-party/CGAL-4.2/CMakeLists.txt: (0.1.1)
	* matlab/ItkToolbox/CMakeLists.txt: (0.6.1)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.3)

	- Final changes to make Gerardus build on Windows 64 bit, with
	Visual Studio 10.

	* CMakeLists.txt: (0.3.2)
	* cpp/src/CMakeLists.txt: (0.3.1)

	- Some more Windows-specific changes to build the Boost libraries.
	Use ${Boost_LIBRARIES} instead of the names of individual
	libraries.  This way, it'll work for both Windows and Unix-like
	builds, as find_package(Boost) will take care of finding the
	library names.

	* CMakeLists.txt: (0.3.1)

	- Add Windows-specific syntax to build the Boost libraries.

2013-06-11  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.3.0)
	* matlab/CMakeLists.txt: (0.3.0)
	* matlab/ItkToolbox/CMakeLists.txt: (0.6.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.2)
	* cpp/src/CMakeLists.txt: (0.3.0)
	* cpp/src/third-party/mba/CMakeLists.txt: (0.1.3)
	* Delete include/boost:

	- Quite big change in the CMake build system. Now Boost libraries
	are built as an external project. Attempts to integrate the build
	and install more closely with the Gerardus CMake build system have
	proven unsuccessful, in part because without using