@@ -1,5 +1,9 @@
 2013-06-14  Ramon Casero  <rcasero@gmail.com>
 
+	* Add matlab/add_gerardus_paths.m: (0.1.0)
+
+	- Add all Gerardus toolboxes to the Matlab path.
+
 	* Rename matlab/ThirdPartyToolbox/nifti as matlab/ThirdPartyToolbox/niftiToolbox:
 
 	- So that it follows the same convention as the others.
